Update: Code factorisation and fix body overflow

--- a/src/components/styles/GlobalStyle.scss
+++ b/src/components/styles/GlobalStyle.scss
@@ -54,21 +54,24 @@ html {
 
 html,
 body {
-  // Va dépendre du projet
-  width: 100%;
-  height: 100%;
-
   background: linear-gradient(to right, #fdbb2d, #22c1c3);
 
   color: var(--clr-4);
 }
-// Make #root div use all available space
 
 body {
   line-height: 1.5;
   font-family: var(--ff);
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
+  align-items: stretch;
+  min-height: 100vh;
+  > * {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    @extend .wrapp;
+  }
 }
 
 /**
@@ -145,29 +148,26 @@ ul {
 }
 
 .container {
-  @extend .flex, .wrapp !optional;
-  @media screen and (min-width: 640px) {
-    max-width: 640px;
-  }
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-  }
-  @media screen and (min-width: 1024px) {
-    max-width: 1024px;
-  }
-  @media screen and (min-width: 1280px) {
-    max-width: 1280px;
-  }
+  // @media screen and (min-width: 640px) {
+  //   max-width: 640px;
+  // }
+  // @media screen and (min-width: 768px) {
+  //   max-width: 768px;
+  // }
+  // @media screen and (min-width: 1024px) {
+  //   max-width: 1024px;
+  // }
+  // @media screen and (min-width: 1280px) {
+  //   max-width: 1280px;
+  // }
   @media screen and (min-width: 1536px) {
     max-width: 1536px;
   }
 }
 
 .wrapp {
-  --pading: 1rem clamp(0.8rem, 2vw + 1rem, 3rem);
+  --pading: 1rem clamp(3.5vw, 1vw + 1rem, 5rem);
   padding: var(--pading, 4rem);
-  margin-right: auto;
-  margin-left: auto;
 }
 .spacing > * + * {
   margin-top: var(--spacer, 2rem);
@@ -184,6 +184,9 @@ ul {
   align-items: center;
 }
 
+.full {
+  width: 100%;
+}
 .split {
   --gap: 2em;
 
@@ -214,16 +217,3 @@ ul {
 //   background-position: center center;
 //   background-size: cover;
 // }
-
-.card {
-  background-color: var(--clr-4);
-  border-radius: 0.625rem;
-  box-shadow: var(--shadow);
-  color: var(--clr-1);
-  flex-direction: column;
-  line-height: 1.38;
-  margin-top: 1.1875rem;
-  &.wrapp {
-    --pading: 2em 1em;
-  }
-}
